--- a/contact.html
+++ b/contact.html
@@ -10,13 +10,51 @@
 <!-- Section 2: Contact Info -->
 <section>
   <!-- h2: Tier-2 Headline -->
-  <h2>Contact Info</h2>
+  <h2>Contact</h2>
+  <form>
+    <fieldset>
+      <div>
+        <select page="dropdown">
+          <option value="Page">Page</option>
+          <option value="About Me">About Me</option>
+          <option value="Portfolio">Portfolio</option>
+          <option value="Contacts">Contacts</option>
+        </select>
+      </div>
+    </fieldset>
+  </form>
+  
+
+  </div>
+  <form>
+    <fieldset>
+      <div></div>
+        <label>Name</label>
+        <input type="text" name="name" placeholder="Name"/>
+      </div>
+      
+      <div>
+        <label>Email</label>
+        <input type="text" name="email" placeholder="Email"/>
+      </div>
+
+      <div>
+        <label>Message</label>
+        <input type="text" name="message" placeholder="Message"/>
+      </div>
+
+      <div>
+        <button type="submit">Submit</button>
+      </div>
+    </fieldset>
+  </form>
+
+
+
   <!-- Unordered list -->
-  <ul>
+  <!-- <ul>
     <li><strong>Email:</strong> <a href="#">markbrazee@gmail.com</a></li>
-  
-  
-  </ul>
+  </ul> -->
 </section>
 </body>
 </html>
