--- a/portfolio.html
+++ b/portfolio.html
@@ -9,8 +9,25 @@
     <!-- Page Header -->
   <header>
     <!-- h1: Mark Brazee's Portfolio -->
-    <h1>Portfolio</h1>
+    <h1>Martk Brazee</h1>
   </header>
+
+  <form>
+    <fieldset>
+      <div>
+        <select page="dropdown">
+          <option value="Page">Page</option>
+          <option value="About Me">About Me</option>
+          <option value="Portfolio">Portfolio</option>
+          <option value="Contacts">Contacts</option>
+        </select>
+      </div>
+    </fieldset>
+  </form>
+  
   <div>
+  <h2 class="bold">Portfolio </h2>
+      
+  </div>
 </body>
 </html>
