--- a/index.html
+++ b/index.html
@@ -67,48 +67,58 @@
   <!-- Page Header -->
   <header>
     <!-- h1: Mark Brazee's Biography -->
-    <h1>Mark Brazee Biography</h1>
+    <h2>Mark Brazee</h2>
   </header>
 
-  <nav>
+  <form>
+    <fieldset>
+      <div>
+        <select page="dropdown">
+          <option value="Page">Page</option>
+          <option value="About Me">About Me</option>
+          <option value="Portfolio">Portfolio</option>
+          <option value="Contacts">Contacts</option>
+        </select>
+      </div>
+    </fieldset>
+  </form>
+
+  <!-- <nav>
     <ul>
-      <li> <a href="index.html">Home Page</a></li>
+      <li> <a href="index.html">About Me</a></li>
       <li> <a href="portfolio.html">Portfolio Page</a></li>
       <li> <a href="contact.html">Contact Page</a></li>
     </ul>
-  </nav>
-  
+  </nav> -->
+
   <div>
     <!-- Section 1: Bio -->
     <section>
       <!-- h2: adjectives -->
 
-      <h2 class="bold">Father. Husband. Cyclist. Architect. </h2>
+      <h1 class="bold">About Me </h1>
       <!-- Image with link -->
       <img src="C:\Documents\homework2020\homework02\homework2\Seagull2009-G7.jpg" alt="Mark Brazee cycling photo">
       <!-- Paragraph with embedded link -->
       <p id=par1>I am an Oregon native. 
-        I've been married to my beautiful wife, Leigh, for 30 years. 
-        We have two wonderful children, Tyler and Alyssa.
-        I have lived in Aurora, Colorado for 25 years.
-        I am an University of Oregon graduate, Go Ducks!
-        I am a former Aurora Academy Charter School School Board Member.
-        I am concerned about the earth and what my children will inherit from previous generations.
-        I am an avid cyclist, riding 2,000 to 3,000 miles a year. Love to ride in the Colorado Rocky Mountains. I would love to ride in the French, Swiss and Italian Alps someday, soon.
-        I am a long time Colorado Rockies and Seattle Mariners fan.
-        I am a Star Wars and Star Trek fan. This is the Way and Live Long and Prosper.
-        I would like to be at the beach.
+        I've been married to my beautiful wife, Leigh, for 30 years. We have two wonderful children, Tyler and Alyssa.
+        I have lived in Aurora, Colorado for 25 years. I am an University of Oregon graduate, Go Ducks! I am a former Aurora Academy Charter School School Board Member.
+        I am concerned about the earth and what my children will inherit from previous generations. I am an avid cyclist, riding 2,000 to 3,000 miles a year. I love to ride in the Colorado Rocky Mountains. I would love to ride in the French, Swiss and Italian Alps someday, soon.
+        I am a long time Colorado Rockies and Seattle Mariners fan. I am a Star Wars and Star Trek fan. This is the Way and Live Long and Prosper.
+      </p>
+
+      <p id=par2> I would like to be at the beach.
         I am a life-long Democrat.
         I am looking to augment or change my professional background after 30 years in the architectural industry.
       </p>
 
-      <p>
+      <!-- <p>
         To view my Portfolio <a href="portfolio.html" target="_blank">select the link</a>
       </p>
 
       <p>
         To contact me <a href="contact.html" target="_blank">select the link</a>
-      </p>
+      </p> -->
 
     </section>
   </div>
