third commit including css

--- a/index.html
+++ b/index.html
@@ -14,9 +14,19 @@
   
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Merriweather:wght@700&family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
 
-  <style>
+    <meta charset="UTF-8">
+    <title>CSS Positioning Demo</title>
+    <!-- Comment out each stylesheet to get the one you'd like to see -->
+    <link rel="stylesheet" href="reset.css">
+     <link rel="stylesheet" href="static.css">
+    <!--<link rel="stylesheet" href="relative.css">-->
+    <!-- <link rel="stylesheet" href="absolute.css"> -->
+    <!--<link rel="stylesheet" href="fixed.css">-->
+    <!--<link rel="stylesheet" href="zindex.css">-->
+    <!--<link rel="stylesheet" href="invisible.css">-->
+  <!-- <style> -->
     
-    #par1.highlight {
+    <!-- /* #par1.highlight {
       color: green;
     }
 
@@ -59,9 +69,9 @@
 
     #par1 {
       color: green;
-    }
+    } */ -->
     
-  </style>
+  <!-- </style> -->
 </head>
 <body>
   <!-- Page Header -->
@@ -100,17 +110,17 @@
       <!-- Image with link -->
       <img src="C:\Documents\homework2020\homework02\homework2\Seagull2009-G7.jpg" alt="Mark Brazee cycling photo">
       <!-- Paragraph with embedded link -->
-      <p id=par1>I am an Oregon native. 
-        I've been married to my beautiful wife, Leigh, for 30 years. We have two wonderful children, Tyler and Alyssa.
-        I have lived in Aurora, Colorado for 25 years. I am an University of Oregon graduate, Go Ducks! I am a former Aurora Academy Charter School School Board Member.
-        I am concerned about the earth and what my children will inherit from previous generations. I am an avid cyclist, riding 2,000 to 3,000 miles a year. I love to ride in the Colorado Rocky Mountains. I would love to ride in the French, Swiss and Italian Alps someday, soon.
-        I am a long time Colorado Rockies and Seattle Mariners fan. I am a Star Wars and Star Trek fan. This is the Way and Live Long and Prosper.
-      </p>
+        <p id=par1>I am an Oregon native. 
+          I've been married to my beautiful wife, Leigh, for 30 years. We have two wonderful children, Tyler and Alyssa.
+          I have lived in Aurora, Colorado for 25 years. I am an University of Oregon graduate, Go Ducks! I am a former Aurora Academy Charter School School Board Member.
+          I am concerned about the earth and what my children will inherit from previous generations. I am an avid cyclist, riding 2,000 to 3,000 miles a year. I love to ride in the Colorado Rocky Mountains. I would love to ride in the French, Swiss and Italian Alps someday, soon.
+          I am a long time Colorado Rockies and Seattle Mariners fan. I am a Star Wars and Star Trek fan. This is the Way and Live Long and Prosper.
+        </p>
 
-      <p id=par2> I would like to be at the beach.
-        I am a life-long Democrat.
-        I am looking to augment or change my professional background after 30 years in the architectural industry.
-      </p>
+        <p id=par2> I would like to be at the beach.
+          I am a life-long Democrat.
+          I am looking to augment or change my professional background after 30 years in the architectural industry.
+        </p>
 
       <!-- <p>
         To view my Portfolio <a href="portfolio.html" target="_blank">select the link</a>
