--- a/contact.html
+++ b/contact.html
@@ -3,27 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact Page</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="style.css">
 </head>
+
+
 <body>
-</section>
-<!-- Section 2: Contact Info -->
+
+  <!-- Navigation Bar-->
 <section>
+  <div class="fixed-top">
+    <div class="collapse" id="navbarToggleExternalContent">
+      <div class="bg-dark p-4">
+        <h5 class="text-white h4">Collapsed content</h5>
+        <span class="text-muted">Toggleable via the navbar brand.</span>
+      </div>
+    </div>
+    <nav class="navbar navbar-light bg-light">
+      <a class="navbar-brand" href="#">Mark Brazee</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+      </button>
+    </nav>
+  </div>
+</Section>
+
+<Section>
   <!-- h2: Tier-2 Headline -->
   <h2>Contact</h2>
-  <form>
-    <fieldset>
-      <div>
-        <select page="dropdown">
-          <option value="Page">Page</option>
-          <option value="About Me">About Me</option>
-          <option value="Portfolio">Portfolio</option>
-          <option value="Contacts">Contacts</option>
-        </select>
-      </div>
-    </fieldset>
-  </form>
-  
 
   </div>
   <form>
