--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
 
     <link rel="stylesheet" href="style.css">
 
+    <style>
+      body {
+        padding: 0 50px;
+        color: gray;
+      }
+      div.row > div,
+      header {
+        outline: 1px solid gray;
+        padding: 8px;
+        text-align: left;
+      }
+      .indent-me span {
+        margin-left: 50px;
+      }
+    </style>
+
 </head>
 <body>
   <!-- Page Header -->
@@ -37,8 +53,58 @@
       </button>
     </nav>
   </div>
-  
+
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <span>FULL WIDTH</span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <span>FULL WIDTH</span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-1">
+        <span>1</span>
+      </div>
+      <div class="col-7">
+        <span>7</span>
+      </div>
+      <div class="col-4">
+        <span>4</span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-1">
+        <span>1</span>
+      </div>
+      <div class="col-7">
+        <span>7</span>
+      </div>
+      <div class="col-4">
+        <span>4</span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <span>FULL WIDTH</span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <span>FULL WIDTH</span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <span>FULL WIDTH</span>
+      </div>
+    </div>
+  </div>
   <div>
+    
     <!-- Section 1: Bio -->
     <section>
       <!-- h2: adjectives -->
