--- a/contact.html
+++ b/contact.html
@@ -13,14 +13,14 @@
     
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href=C:\Documents\homework2020\homework02\homework2\assets\style.css>
 </head>
 
 
 <body>
 
   <!-- Navigation Bar-->
-<section>
+  <section>
   <div class="fixed-top">
     <div class="collapse" id="navbarToggleExternalContent">
       <div class="bg-dark p-4">
@@ -35,42 +35,94 @@
       </button>
     </nav>
   </div>
-</Section>
+  </Section>
 
-<Section>
-  <!-- h2: Tier-2 Headline -->
+  <Section>
+  <!-- h2: Tier-2 Headline Contact Information -->
   <h2>Contact</h2>
 
-  </div>
-  <form>
-    <fieldset>
-      <div></div>
-        <label>Name</label>
-        <input type="text" name="name" placeholder="Name"/>
+  <div class="container">
+    <div class="row">
+      <div class="col-12"> 
+        <div style="height: 100px;">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-1">
+        <div style="height: 25px;">
+      </div>
+      <div class="col-7">
+        <div style="height: 25px; background-color: box-color;">
+        <h1 class="bold">Contact</h1>
+      </div>
+      <div class="col-4">
+      </div>
+    </div>
+  
+
+    <form>
+    <div>
+      <div class="row">
+        <div class="col-1">
+          <div style="height: 50px;">
+        </div>
+        <div class="col-7">
+          <div style="height: 50px; background-color: box-color;">
+          <fieldset>
+            <div>
+              <label>Name</label>
+              <input type="text" name="name" placeholder="Name"/>
+            </div>
+          </fieldset>
+        </div>
       </div>
       
-      <div>
-        <label>Email</label>
-        <input type="text" name="email" placeholder="Email"/>
+      <div class="row">
+        <div class="col-1">
+          <div style="height: 50px;">
+        </div>
+        <div class="col-7">
+          <div style="height: 50px; background-color: box-color;">
+          <fieldset>
+            <div>
+              <label>Email</label>
+              <input type="text" name="email" placeholder="Email"/>
+            </div>
+          </fieldset>
+        </div>
       </div>
 
-      <div>
-        <label>Message</label>
-        <input type="text" name="message" placeholder="Message"/>
+      <div class="row">
+        <div class="col-1">
+          <div style="height: 50px;">
+        </div>
+        <div style="height: 50px; background-color: box-color;">
+        <div class="box-color">
+          <fieldset>
+            <div>
+              <label>Message</label>
+              <input type="text" name="message" placeholder="Message"/>
+            </div>
+          </fieldset>
+        </div>
+
+        <div class="row">
+          <div class="col-1">
+            <div style="height: 50px;">
+          </div>
+          <div class="col-7">
+            <div style="height: 50px; background-color: highlight;">
+            <fieldset>
+              <div>
+                <button type="submit">Submit</button>
+              </div>
+            </fieldset>
+          </div>
+        </div>
       </div>
-
-      <div>
-        <button type="submit">Submit</button>
-      </div>
-    </fieldset>
-  </form>
-
-
-
-  <!-- Unordered list -->
-  <!-- <ul>
-    <li><strong>Email:</strong> <a href="#">markbrazee@gmail.com</a></li>
-  </ul> -->
-</section>
+    </div>
+    </form>
+  </div>
 </body>
 </html>
