--- a/portfolio.html
+++ b/portfolio.html
@@ -53,22 +53,98 @@
       <div class="row">
         <div class="col-1">
           <div style="height: 50px;">
-      </div>
-
-      <div class="col-7">
+        </div>
+        <div class="col-7">
         <div style="height: 50px; background-color: box-color;">
           <h1 class="bold">Portfolio </h1>
           </div>
-      </div>
-
-      </div>
+        </div>
+        </div>
         <div class="col-4">
           <div style="height: 50px; background-color: box-color;">
           </div>
-        </div> 
-      </div>
+        </div>
 
-      
+        <div class="row">
+          <div class="col-1">
+            <div style="height: 400px;">
+          </div>
+          <div class="col-7">
+            <div style="height: 400px; background-color: box-color;">
+            <img src=""; 300px;>
+            </div>
+          </div>
+          </div>
+          <div class="col-4">
+            <div style="height: 400px; background-color: box-color;">
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-1">
+            <div style="height: 400px;">
+          </div>
+          <div class="col-7">
+            <div style="height: 400px; background-color: box-color;">
+            <img src=""; 300px;>
+            </div>
+          </div>
+          </div>
+          <div class="col-4">
+            <div style="height: 400px; background-color: box-color;">
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-1">
+            <div style="height: 400px;">
+          </div>
+          <div class="col-7">
+            <div style="height: 400px; background-color: box-color;">
+            <img src=""; 300px;>
+            </div>
+          </div>
+          </div>
+          <div class="col-4">
+            <div style="height: 400px; background-color: box-color;">
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-1">
+            <div style="height: 400px;">
+          </div>
+          <div class="col-7">
+            <div style="height: 400px; background-color: box-color;">
+            <img src=""; 300px;>
+            </div>
+          </div>
+          </div>
+          <div class="col-4">
+            <div style="height: 400px; background-color: box-color;">
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-1">
+            <div style="height: 400px;">
+          </div>
+          <div class="col-7">
+            <div style="height: 400px; background-color: box-color;">
+            <img src=""; 300px;>
+            </div>
+          </div>
+          </div>
+          <div class="col-4">
+            <div style="height: 400px; background-color: box-color;">
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
       
