--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <h1 class="bold">About Me </h1>
           </div>
           <div class="col-4">
-            <div style="height: 50px; background-color: box-color;">
+            <div style="height: 50px; "background-color: box-color;">
           </div>
         </div>
 
@@ -132,7 +132,8 @@
             <!-- <div style="height: 50px;"> -->
           </div>
           <div class="col-7">
-            <!-- <div style="height: 50px; background-color: box-color;"> -->
+            <dim style="width: max-width: 100%;background-color: box-color">
+            </dim>
             <img src="C:\Documents\homework2020\homework02\homework2\assets\Seagull2009-G7.jpg" alt="Mark Brazee cycling photo"> 
             <p id="par1">I am an Oregon native. 
               I've been married to my beautiful wife, Leigh, for 30 years. We have two wonderful children, Tyler and Alyssa. I have lived in Aurora, Colorado for 25 years. I am an University of Oregon graduate, Go Ducks! I am a former Aurora Academy Charter School School Board Member. I am concerned about the earth and what my children will inherit from previous generations. I am an avid cyclist, riding 2,000 to 3,000 miles a year.
@@ -148,7 +149,7 @@
             <!-- <div style="height: 50px;"> -->
           </div>
           <div class="col-7">
-            <!-- <div style="height: 50px; background-color: box-color;"> -->
+            <!-- <div style="height: 50px; "background-color: box-color;"> -->
             <p id="par2">
               I love to ride in the Colorado Rocky Mountains. I would love to ride in the French, Swiss and Italian Alps someday, soon. I am a long time Colorado Rockies and Seattle Mariners fan. I am a Star Wars and Star Trek fan. This is the Way and Live Long and Prosper.
             </p>
@@ -171,14 +172,15 @@
           <div class="col-4">
             <!-- <div style="height: 50px; background-color: box-color;"> -->
           </div>
+        </div>
         
-          <div class="row">
+        <div class="footer">
             <div class="col-12">
             <div class="footer-color1">
             </div>
           </div>
 
-          <div class="row">
+          <div class="footer">
             <div class="col-12">
             <div class="footer-color2">
             </div>
