--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, intial-scale=1.0">
+
   <title>About Me Page</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
@@ -13,22 +15,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href=C:\Documents\homework2020\homework02\homework2\assets\style.css>
-
-    <style>
-      body {
-        padding: 0 50px;
-        color: gray;
-      }
-      div.row > div,
-      header {
-        outline: 1px solid gray;
-        padding: 8px;
-        text-align: left;
-      }
-      .indent-me span {
-        margin-left: 50px;
-      }
-    </style>
 
 </head>
 <body>
@@ -115,23 +101,17 @@
         </div>
 
         <div class="row">
-          <div class="col-1">
-            <div style="height: 50px;">
-          </div>
-          <div class="col-7">
-            <div style="height: 50px; background-color: box-color;">
+          <div class="col-xs-12 col-md-8 col-lg-4">
+            <div style="height: 20px; background-color: box-color;">
             <h1 class="bold">About Me </h1>
           </div>
-          <div class="col-4">
-            <div style="height: 50px; "background-color: box-color;">
+          <div class="col-xs-6 col-md-4 col-lg-2">
+            <div style="height: 20px; background-color: box-color;">
           </div>
         </div>
 
         <div class="row">
-          <div class="col-1">
-            <!-- <div style="height: 50px;"> -->
-          </div>
-          <div class="col-7">
+          <div class="col-xs-12 col-md-8 col-lg-4">
             <dim style="width: max-width: 100%;background-color: box-color">
             </dim>
             <img src="C:\Documents\homework2020\homework02\homework2\assets\Seagull2009-G7.jpg" alt="Mark Brazee cycling photo"> 
@@ -139,37 +119,31 @@
               I've been married to my beautiful wife, Leigh, for 30 years. We have two wonderful children, Tyler and Alyssa. I have lived in Aurora, Colorado for 25 years. I am an University of Oregon graduate, Go Ducks! I am a former Aurora Academy Charter School School Board Member. I am concerned about the earth and what my children will inherit from previous generations. I am an avid cyclist, riding 2,000 to 3,000 miles a year.
             </p> 
           </div>
-          <div class="col-4">
+          <div class="col-xs-6 col-md-4 col-lg-2">
             <!-- <div style="height: 50px; background-color: box-color;"> -->
           </div>
         </div>
 
         <div class="row">
-          <div class="col-1">
-            <!-- <div style="height: 50px;"> -->
-          </div>
-          <div class="col-7">
+          <div class="col-xs-12 col-md-8 col-lg-4">
             <!-- <div style="height: 50px; "background-color: box-color;"> -->
             <p id="par2">
               I love to ride in the Colorado Rocky Mountains. I would love to ride in the French, Swiss and Italian Alps someday, soon. I am a long time Colorado Rockies and Seattle Mariners fan. I am a Star Wars and Star Trek fan. This is the Way and Live Long and Prosper.
             </p>
           </div>
-          <div class="col-4">
+          <div class="col-xs-6 col-md-4 col-lg-2">
             <!-- <div style="height: 50px; background-color: box-color;"> -->
           </div>
         </div>
 
         <div class="row">
-          <div class="col-1">
-            <!-- <div style="height: 50px;"> -->
-          </div>
-          <div class="col-7">
+          <div class="col-xs-12 col-md-8 col-lg-4">
             <!-- <div style="height: 50px; background-color: box-color;"> -->
             <p id="par3"> 
               I would like to be at the beach. I am a life-long Democrat. I am looking to augment or change my professional background after 30 years in the architectural industry.
             </p>
           </div>
-          <div class="col-4">
+          <div class="col-xs-6 col-md-4 col-lg-2">
             <!-- <div style="height: 50px; background-color: box-color;"> -->
           </div>
         </div>
