--- a/portfolio.html
+++ b/portfolio.html
@@ -43,106 +43,38 @@
   </Section>
 
   <section>
-    <div class="container">
+    <div class="container main">
       <div class="row">
         <div class="col-12"> 
-          <div style="height: 100px;">
+          <div style="height: 25px;">
         </div>
       </div>
 
+
       <div class="row">
-        <div class="col-1">
-          <div style="height: 50px;">
-        </div>
-        <div class="col-7">
-        <div style="height: 50px; background-color: box-color;">
+        <div class="box-color col-xs-12 col-md-8 col-lg-4">
+          <div style="height: 20px; width: 800px">
           <h1 class="bold">Portfolio </h1>
-          </div>
-        </div>
-        </div>
-        <div class="col-4">
-          <div style="height: 50px; background-color: box-color;">
-          </div>
         </div>
 
-        <div class="row">
-          <div class="col-1">
-            <div style="height: 400px;">
-          </div>
-          <div class="col-7">
-            <div style="height: 400px; background-color: box-color;">
-            <img src=""; 300px;>
-            </div>
-          </div>
-          </div>
-          <div class="col-4">
-            <div style="height: 400px; background-color: box-color;">
-            </div>
-          </div>
+        <div class="portfolioBox col-xs-12 col-md-8 col-lg-4">
+          <div style="height: 400px; width: 400px;background-color: box-color;">
+        </div>
+        
+        <div class="portfolioBox col-xs-12 col-md-8 col-lg-4">
+          <div style="height: 400px; width: 400px;background-color: box-color;">
         </div>
 
-        <div class="row">
-          <div class="col-1">
-            <div style="height: 400px;">
-          </div>
-          <div class="col-7">
-            <div style="height: 400px; background-color: box-color;">
-            <img src=""; 300px;>
-            </div>
-          </div>
-          </div>
-          <div class="col-4">
-            <div style="height: 400px; background-color: box-color;">
-            </div>
-          </div>
+        <div class="portfolioBox col-xs-12 col-md-8 col-lg-4">
+          <div style="height: 400px; width: 400px;background-color: box-color;">
+        </div>
+        
+        <div class="portfolioBox col-xs-12 col-md-8 col-lg-4">
+          <div style="height: 400px; width: 400px;background-color: box-color;">
         </div>
 
-        <div class="row">
-          <div class="col-1">
-            <div style="height: 400px;">
-          </div>
-          <div class="col-7">
-            <div style="height: 400px; background-color: box-color;">
-            <img src=""; 300px;>
-            </div>
-          </div>
-          </div>
-          <div class="col-4">
-            <div style="height: 400px; background-color: box-color;">
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-1">
-            <div style="height: 400px;">
-          </div>
-          <div class="col-7">
-            <div style="height: 400px; background-color: box-color;">
-            <img src=""; 300px;>
-            </div>
-          </div>
-          </div>
-          <div class="col-4">
-            <div style="height: 400px; background-color: box-color;">
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-1">
-            <div style="height: 400px;">
-          </div>
-          <div class="col-7">
-            <div style="height: 400px; background-color: box-color;">
-            <img src=""; 300px;>
-            </div>
-          </div>
-          </div>
-          <div class="col-4">
-            <div style="height: 400px; background-color: box-color;">
-            </div>
-          </div>
+        <div class="portfolioBox col-xs-12 col-md-8 col-lg-4">
+          <div style="height: 400px; width: 400px;background-color: box-color;">
         </div>
       </div>
     </div>
