--- a/index.html
+++ b/index.html
@@ -93,16 +93,16 @@
     
   <!-- Section 1: About Me -->
     <section>
-      <div class="container">
+      <div class="container main">
         <div class="row">
           <div class="col-12"> 
-            <div style="height: 100px;">
+            <div style="height: 25px;">
           </div>
         </div>
 
         <div class="row">
-          <div class="col-xs-12 col-md-8 col-lg-4">
-            <div style="height: 20px; background-color: box-color;">
+          <div class="box-color col-xs-12 col-md-8 col-lg-4">
+            <div style="height: 20px;">
             <h1 class="bold">About Me </h1>
           </div>
           <div class="col-xs-6 col-md-4 col-lg-2">
@@ -112,9 +112,9 @@
 
         <div class="row">
           <div class="col-xs-12 col-md-8 col-lg-4">
-            <dim style="width: max-width: 100%;background-color: box-color">
-            </dim>
-            <img src="C:\Documents\homework2020\homework02\homework2\assets\Seagull2009-G7.jpg" alt="Mark Brazee cycling photo"> 
+            <div style="width: 100%; background-color: box-color">
+          </div>
+            <img style="width:70%; float: left; margin: 10px; "src=".\assets\Seagull2009-G7.jpg" alt="Mark Brazee cycling photo"> 
             <p id="par1">I am an Oregon native. 
               I've been married to my beautiful wife, Leigh, for 30 years. We have two wonderful children, Tyler and Alyssa. I have lived in Aurora, Colorado for 25 years. I am an University of Oregon graduate, Go Ducks! I am a former Aurora Academy Charter School School Board Member. I am concerned about the earth and what my children will inherit from previous generations. I am an avid cyclist, riding 2,000 to 3,000 miles a year.
             </p> 
